--- a/liens/1.css
+++ b/liens/1.css
@@ -343,7 +343,7 @@ display: none;
     */
 #imagePrincipale {
   padding-top: 260px;
-  background: url(/img/background/arriere.png) no-repeat 60% 60%;
+  background: url(img/background/arriere.png) no-repeat 60% 60%;
   background-size: cover;
   height: 799px;
 }
