--- a/liens/3.css
+++ b/liens/3.css
@@ -343,7 +343,7 @@ display: none;
     */
 #imagePrincipale {
   padding-top: 260px;
-  background: url(/img/background/arriere.png) no-repeat 60% 60%;
+  background: url(img/background/arriere.png) no-repeat 60% 60%;
   background-size: cover;
   height: 799px;
 }
@@ -419,8 +419,7 @@ h5{
 }
 h6 {
   font-family: 'Dancing Script', cursive;
-  color: #00abfa;
-
+  color: #5b5bbd;
   font-size: 6em;
   margin-left: 1%;
   margin-top: 100px;
@@ -430,8 +429,7 @@ h6 {
 #titre{
     font-family: 'Dancing Script', cursive;
     text-align: center;
-    color: #7f6ccf;
-
+    color: #5b5bbd;
     font-size: 6em;
     margin-top: 100px;
     text-shadow: 1px 3px 2px rgb(0, 0, 0);
@@ -455,8 +453,7 @@ h6 {
   margin: 30px -820px 2 0;
 }
 .txt-violet a {
-  color: #7f6ccf;
-  
+  color: #5b5bbd;
 
 }
 
