--- a/liens/6.css
+++ b/liens/6.css
@@ -1,57 +1,335 @@
+body{
+  margin: 0% 0%;
+  padding: 0% 0%;
+  font-family: 'Advent Pro', sans-serif;
+}
 @import url('https://fonts.googleapis.com/css?family=Advent+Pro|Dancing+Script&display=swap');
 
 html {
-  scroll-behavior: smooth;
+scroll-behavior: smooth;
 }
 
-body {
-  font-family: 'Advent Pro', sans-serif;
-  padding: 0;
-  margin: 0;
-}
+
 ul {
-  margin: 0;
-  padding: 0;
+margin: 0;
+padding: 0;
+z-index: 4;
 }
 li {
-  list-style-type: none;
-  
+list-style-type: none;
+
 }
-h2 {
-  text-transform: uppercase;
-  text-align: center;
-  padding-top: 30px;
-  font-size: 3em;
-  font-family: Arial, Helvetica, sans-serif;
+.h2 {
+text-transform: uppercase;
+text-align: center;
+padding-top: 40px;
+font-size: 3em;
 }
 a {
-  text-decoration: none;
-  color: black;
+text-decoration: none;
 }
 /* ******************* NAVBAR ******************* */
-nav {
+.nav {
   overflow: hidden;
-  background-color: #f1f2f6;
   position: fixed;
   width: 100%;
   opacity: 0.9;
+  background-color: #333131;  
+  z-index: 7;
+
 }
-header li {
-  float: right;
-  font-size: 2em;
+.header ul {
+  list-style-type: none;
+  z-index: 7;
+
 }
-header li a {
+.header li {
+  float: left;
+  z-index: 7;
+
+}
+.header li a {
   text-decoration: none;
   display: block;
-  text-align: center;
-  padding: 18px 16px;
-}
+  padding: 18px 40px;
+  margin-bottom: 6.5%;
+  color: white ;
+  font-family: sans-serif;
+  font-size: 160%;
+  z-index: 7;
+
+
+ }
 #logo {
-  font-family: 'Dancing Script', cursive;
   font-weight: bold;
   float: left;
+  margin-left: 2.6%;
+  margin-top: 0.5%;
+  margin-right: 4%;
+  z-index: 7;
+
 }
+
 .ul1 li a:hover {
+  background-color: #5a5a5a;
+  color: #fff;
+  z-index: 7;
+
+}
+
+
+.nav-droite{
+padding-top: 0.8%;
+z-index: 7;
+
+}
+/* ******************* NAVBAR-burger ******************* */
+.header__logo img {
+max-height: 50px;
+z-index: 7;
+
+}
+
+
+.header__nav__menu {
+padding: 0;
+margin: 0;
+list-style: none;
+display: flex;
+z-index: 7;
+
+}
+
+.header__nav__menu__link {
+margin-right: 20px;
+z-index: 7;
+
+
+}
+.header__nav__menu__link h1 {
+color: #fff;
+margin-left: 80%;
+font-size: 15px;
+z-index: 7;
+
+}
+.header__nav__menu__link h3 {
+color: #fff;
+margin-left: 41%;
+font-size: 15px;
+z-index: 7;
+
+}
+.header__nav__menu__link h4 {
+color: #fff;
+margin-left: 49%;
+z-index: 7;
+
+font-size: 15px;
+}
+
+.sous_titre{
+display: block;
+}
+
+.img_sous_texte{
+position: absolute;
+display: flex;
+left: 25%;
+margin-top: -2%;
+z-index: 7;
+
+}
+.img_sous_textes{
+position: absolute;
+display: flex;
+left: 38%;
+margin-top: -1%;
+top: 27.2%;
+z-index: 7;
+
+}
+
+.header__nav__menu__link:last-of-type {
+margin-right: initial;
+z-index: 7;
+
+}
+
+.header__nav__menu__link a {
+color: #fff;
+font-family: 'Arial';
+font-weight: 850;
+z-index: 7;
+
+text-decoration: none;
+position: relative;
+}
+
+.header__nav__menu__link a:after {
+content: '';
+height: 2px;
+background-color: #fff;
+width: 0;
+position: absolute;
+bottom: -5px;
+right: 0;
+transition: 0.2s all ease-in-out;
+z-index: 7;
+
+}
+
+.header__nav__menu__link a:hover:after {
+width: 100%;
+left: 0;
+z-index: 7;
+
+}
+
+.header__burger {
+display: none;
+z-index: 7;
+
+
+}
+
+.header__burger svg {
+stroke: #fff;
+width: 70px;
+height: 70px;
+float: right;
+right: 35px;
+top: 12px;
+position: absolute;
+z-index: 7;
+position: fixed;
+
+}
+
+.header__nav__close {
+display: none;
+}
+
+@media screen and (max-width: 10500px) {
+
+.header__burger {
+    display: block;
+    cursor: pointer;
+    z-index: 7;
+
+}
+
+
+.header__nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100vh;
+    background-color: #333333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+    z-index: 7;
+
+}
+
+.header__nav.open {
+    display: flex;
+    animation: transformMenu 300ms ease-in-out forwards;
+    z-index: 7;
+
+}
+
+@keyframes transformMenu {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: initial;
+    }
+}
+
+.header__nav__menu {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-right: 15%;
+    z-index: 7;
+
+}
+
+.header__nav__menu__link {
+    margin-right: 0;
+    z-index: 7;
+
+    margin-bottom: 20px;
+}
+
+.header__nav__menu__link a {
+    font-size: 40px;
+    left: 8%;
+    z-index: 7;
+
+}
+
+.header__nav__close {
+    display: block;
+    z-index: 7;
+
+    cursor: pointer;
+    
+}
+
+.header__nav__close svg {
+    stroke: #fff;
+    width: 22px;
+    z-index: 7;
+
+    height: 22px;
+    position: absolute;
+    top: 16px;
+    right: 16px;
+}
+
+.overlay-menu-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.6);
+    display: none;
+    z-index: 7;
+
+}
+
+.overlay-menu-mobile.open {
+    display: block;z-index: 7;
+
+}
+
+}
+.ul{
+
+  width: 300px;
+  background-color: #f1f1f1;
+  position: absolute;
+  font-size: 1.6em;
+  text-align: center;
+  margin-top: 4%;
+  z-index: 1;
+
+}
+.ul a{
+  display: block;
+  color: #191b21;
+  padding: 48px 60px;
+  text-decoration: none;
+  z-index: 1;
+}
+.ul li a:hover {
   background-color: #fad390;
   color: #fff;
 }
@@ -59,38 +337,17 @@ header li a {
   .icon {
     margin-right: 10px;
   }
-  #texte {
-    padding: 0px;
-    color: #c78043;
-    transition: transform .2s; /* Animation */
-    width: 400px;
-    height: 0px;
-    margin: -1 auto;
-    margin-left: 135px;
-    text-shadow: 1px 3px 2px rgb(0, 0, 0);
+
+/* **************** IMAGE PRINCIPALE ************* display: block;
   
-    margin-top: -35px;
-  }
-  #texte:hover {
-    
-   
-    transform: scale(1.5);
-  }
-/* **************** IMAGE PRINCIPALE ************* */
+    */
 #imagePrincipale {
   padding-top: 260px;
-  background: url(/media1/arriere.png) no-repeat 60% 60%;
+  background: url(img/background/arriere.png) no-repeat 60% 60%;
   background-size: cover;
   height: 799px;
 }
-h1 {
-  font-family: 'Dancing Script', cursive;
-  text-align: center;
-  color: #db262f;
-  font-size: 6em;
-  margin-top: 100px;
-  text-shadow: 1px 3px 2px rgb(0, 0, 0);
-}
+
 #premierTrait {
   height: 1px;
   width: 25%;
@@ -98,7 +355,7 @@ h1 {
   background-color: #191b21;
   box-shadow: 1px 3px 2px #191b21;
 }
-h3 {
+.h3 {
   text-align: center;
   color:antiquewhite;
   font-size: 3.2em;
@@ -113,10 +370,10 @@ h3 {
 p{
     color: #f1f2f6;
 }
-h4{
+h5{
   font-style: italic;
-  
-  
+  text-align: center;
+  font-size: medium;
   font-family: Arial, Helvetica, sans-serif;
 }
 #presentation {
@@ -136,7 +393,7 @@ h4{
   justify-content: space-between;
   padding: 30px 20%;  
 }
-.imagesPrestations h4 {
+.imagesPrestations h5 {
   text-align: center;
   font-size: 1.4em;
   margin: 18px;
@@ -144,142 +401,75 @@ h4{
 }
 .imagesPrestations img {
   border-radius: 10px;
-  box-shadow: 5px 5px 3px 1px rgba(0,0,0,0.7);
+  box-shadow: 5px 5px 3px 1px rgb(0 0 0 / 70%);
   height: 345px;
   width: 635px;
   display: flex;
 }
-.txt h4{
-  display: flex;
- 
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 10px;
-  margin: 27px -60px 0 0;
-
+.imagesPrestations img:hover {
+  opacity: 0.5;
+  transform: scale(1.05);
+  transition: 0.6s ease-in-out;
 }
+
+.ecarlate{
+  margin-left: -10px;
+ display: flex;
+ margin-top: 30px;
+}
+h6 {
+  font-family: 'Dancing Script', cursive;
+  color: #5b5bbd;
+  font-size: 6em;
+  margin-left: 1%;
+  margin-top: 100px;
+  text-shadow: 1px 3px 2px rgb(0, 0, 0);
+  z-index: 3;
+}
+#titre{
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+    color: #5b5bbd;
+    font-size: 6em;
+    margin-top: 100px;
+    text-shadow: 1px 3px 2px rgb(0, 0, 0);
+    margin-top: -35px;
+  }
 
 
 .violet{
-  margin-left: 300px;
-  margin-top: 100px;
+  margin-left: 340px;
+  margin-top: 130px;
   display: flex;
 }
-.txt-violet{
+.txt-violet {
   margin-left: 1000px;
-  margin-top: -300px;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 18px;
-    display: flex;
-    height: 5px;
-    width: 980px;
-    
-   margin: 30px -820px 2 0;
-    
-}
-#download{
-   display: flex;
-   height: 50px;
-    width: 00px;
-    margin-left: 400px;
-    margin-top: 80;
-}
-#cle{
+  margin-top: -290px;
+  text-transform: none;
+  text-align: center;
+  font-size: 1.3em;
   display: flex;
-  margin-left: -10px;
-  margin-top: 155px;
+  height: 5px;
+  margin: 30px -820px 2 0;
 }
-#cente{
-  block-size: center;
-
-}  
-
-
-#titre{
+.txt-violet a {
+  color: #5b5bbd;
 
 }
+
 #texte {
   padding: 0px;
-  color: #c78043;
-  transition: transform .2s; /* Animation */
+  transition: transform .2s;
   width: 400px;
   height: 0px;
   margin: -1 auto;
-  margin-left: 135px;
-  text-shadow: 1px 3px 2px rgb(0, 0, 0);
-
-  margin-top: -35px;
+  margin-left: 98px;
+  text-shadow: 1px 3px 2px rgb(0 0 0);
+  margin-top: -38px;
 }
 #texte:hover {
 	
  
-  transform: scale(1.5);
+  transform: scale(1.1);
 }
-#point{
-  color: white;
-}
-.ul {
-    list-style-type: none;
-    margin: 0 2px;
-    padding: 0;
-    width: 250px;
-    background-color: #f1f1f1;
-    position: absolute;
-    font-size: 1em;
-    text-align: center;
-    margin-top: 82em;
-  }
-  
-  .ul li a {
-    display: block;
-    color: #191b21;
-    padding: 28px 40px;
-    text-decoration: none;
-  }
-  
-  /* color change on hover */
-  .ul li a:hover {
-    background-color: #fad390;
-    color: #fff;
-  }
-  
-    .icon {
-      margin-right: 10px;
-    }
 
-    #textes {
-        padding: 0px;
-        color: #f0b11b;
-        transition: transform .2s; /* Animation */
-        width: 400px;
-        height: 0px;
-        margin: -1 auto;
-        margin-left: 140px;
-        text-shadow: 1px 3px 2px rgb(0, 0, 0);
-        margin-top: -36px;
-      }
-      .violets{
-        margin-left: 300px;
-        margin-top: 350px;
-        display: flex;
-        
-      }
-      .txt-violets{
-        margin-left: 1000px;
-        margin-top: -315px;
-          text-transform: uppercase;
-          text-align: center;
-          font-size: 18px;
-          display: flex;
-          height: 5px;
-          width: 980px;
-         margin: 30px -820px 2 0;
-      }
-      #textes:hover {
-	
- 
-        transform: scale(1.5);
-      }    
-  
-    
